--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/header/header.component.css
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/header/header.component.css
@@ -1,3 +1,8 @@
 div{
     background-color: rgb(70, 70, 70);
 }
+app-iconos-social{
+    float:right;
+    padding-top:7px;
+    padding-right: 20px;
+}
