--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/iconos-social/iconos-social.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/iconos-social/iconos-social.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container-fluid d-flex justify-content-end">
     <a href=""><img src="../../../assets/github-white.png" id="github"></a>
     <a href=""><img src="../../../assets/linkedin-white.png" id="linkedin"></a>
     <a href=""><img src="../../../assets/facebook-white.png" id="facebook-white"></a>
