Se crearon en la carpeta componentes, los componentes experiencia y educacion

--- a/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
+<app-header></app-header><!--los componentes iconos-social y logo-ap, no estan aqui porque estan dentro de app-header-->
 <app-acerca-de></app-acerca-de>
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
