--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.css
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.css
@@ -13,14 +13,12 @@ div{
    font-weight: bold;
    margin-top: 20%;
 }
-
-
 @media(max-width: 678px){ /*caundo llegue al minimo de pantalla(aqui se marco con 576px) va a pasar esto...*/
     #imagenPerfil{
         width: 35%;
         position: absolute;
         border-radius: 100%;
-        border: shadow 3px 3px 3px grey;
+        border-style:ridge;
         left:32%;
         z-index: 1;
         top:400px;
@@ -31,7 +29,7 @@ div{
     width: 16%;
     position: absolute;
     border-radius: 100%;
-    border: shadow 3px 3px 3px grey;
+    border-style:ridge;
     left:5%;
     z-index: 1;
     top:350px;
