Se corrigio toda la maqueta eliminando algunos componentes y creando otros ademas de hacerla responsive y con Booststrap 5.2

--- a/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
@@ -1,7 +1,10 @@
-<app-header></app-header><!--los componentes iconos-social y logo-ap, no estan aqui porque estan dentro de app-header-->
+<div class="flex-contenedor"> <!--esto no se si va aca o va en el index.html general-->
+<app-navbar></app-navbar>
+<app-banner></app-banner>
 <app-acerca-de></app-acerca-de>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
 <app-skills></app-skills>
 <app-proyectos></app-proyectos>
 <app-footer></app-footer>
+</div>
