--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.html
@@ -1,3 +1,12 @@
-<div>
-    <img src="../../../assets/banner1.png" id="banner">
-</div>
+    <!--header Banner -->
+    <header>
+      <div class="contenedor">
+        <img class="img-fluid"
+          src="../../../assets/banner1.png" id="banner1">
+  
+        <a type="button" data-bs-target="#modalBanner" data-bs-toggle="modal">
+          <img class="nav-menu-link-img"
+            src="../../../assets/edit.png" id="lapiz">
+        </a>
+      </div>
+    </header>
