--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.css
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.css
@@ -1,6 +1,54 @@
-img{
-    width: 100%;
-    height: 400px;
-    border-bottom-left-radius: 3em;
-    border-bottom-right-radius: 3em;
+*{
+   box-sizing: border-box;
+}
+.body{
+  height: 100%;
+  margin: 0;
+}
+.contenedor{
+   height: auto;
+   margin-bottom: 1em;
+   margin-left: 1em;
+   margin-right: 1em;
+   border-radius: 1em;
+}
+/*
+header{
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 1em;
+}
+*/
+.img-fluid{
+   border-bottom-right-radius: 1em;
+   border-bottom-left-radius: 1em;
+   width: 100%;
+   height: 100%;
+}
+#Banner1{
+   position: absolute;
+   z-index: 1!important;
+}
+#lapiz{
+   position:absolute;
+   z-index: 2!important;
+   margin-left: 75em;
+   top:5em;
+   right: 3em!important;
+}
+.nav-menu-link-img{
+   padding: 2px;
+   height: 2em;
+}
+@media(max-width: 768px){
+   .nav-menu-link-img{
+       height: 2rem;
+   }
+   .contenedor{
+      height: auto;
+      margin-bottom: 0.5em;
+      margin-left: 0.5em;
+      margin-right: 0.5em;
+      border-radius: 0.5em;
+   }
 }
