--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/educacion/educacion.component.css
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/educacion/educacion.component.css
@@ -1,16 +1,60 @@
-.row{
-    padding: 20px;
-    margin-top:20px;
-    margin-left: 10px;
-    margin-right: 10px;
+* {
+    box-sizing: border-box;
 }
-div{
-    background-color: rgb(255, 226, 146);
-    border-radius: 3em;
+
+.body {
+    height: 100%;
+    margin: 0;
+    padding: 10px;
 }
-h1, h3{
-    display: inline;
+
+.contenedor {
+    background: linear-gradient(#a895d4, #392b72);
+    -webkit-text-fill-color: aliceblue;
+    height: auto;
+    margin-bottom: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-radius: 1em;
 }
-li{
-    list-style: none;
+
+.table.table-dark {
+    margin-top: 3px;
+    margin-right: 1px;
+}
+
+/*Texto responsive*/
+h3 h4 h5 {
+    font-size: 1rem;
+}
+
+p {
+    font-weight: bold;
+}
+
+.nav-menu-link-img {
+    padding: 2px;
+    height: 2em;
+}
+
+@media(max-width: 768px) {
+    .nav-menu-link-img {
+        height: 2rem;
+    }
+
+    h3 h4 h5 {
+        font-size: 1.2rem;
+    }
+    .contenedor{
+        height: auto;
+        margin-bottom: 0.5em;
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+        padding-top: 0.5em;
+        border-radius: 0.5em;
+     }
 }
