--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/footer/footer.component.css
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/footer/footer.component.css
@@ -1,11 +1,17 @@
-.row{
-    margin-top: 15px;
-    padding: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+*{
+    box-sizing: border-box;
 }
-div{
-    background-color: rgb(255, 226, 146);
-    border-radius: 3em;
+.body{
+    height: 100%;
+	margin: 0;
+	padding: 10px;
+}
+h3 h4 h5{
+    font-size: 1rem;
+}
+p{
+    font-weight: bold;
+}
+h3 h4 h5{
+    font-size: 1.2rem;
 }
