--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/footer/footer.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/footer/footer.component.html
@@ -1,6 +1,13 @@
-<div class="row">
-    <footer>
-        <p>Carolina E. M. Salanova | © Argentina Programa 2022</p>
-        <p>Social media icons:<a href="https://www.iconshock.com/freeicons/collection/ant-design-icons"> https://www.iconshock.com/freeicons/collection/ant-design-icons</a> (Licencia MIT): <a href="https://mit-license.org/">https://mit-license.org/</a></p>
-    </footer>
-</div>
+<section id="footer" class="pie-de-pagina">
+    <div class="container container-fluid text-center">
+      <div class="row mainrow d-lg-block d-flex overflow-auto">
+        <div class="col">
+          <p>Carolina E. M. Salanova | © Argentina Programa 2022</p>
+          <p>Social media icons:<a href="https://www.iconshock.com/freeicons/collection/ant-design-icons">
+              https://www.iconshock.com/freeicons/collection/ant-design-icons</a>
+            (Licencia MIT): <a href="https://mit-license.org/">https://mit-license.org/</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
