--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/skills/skills.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/skills/skills.component.html
@@ -1,123 +1,56 @@
-<div class="row">
-    <h1>Skills</h1>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-      <circle-progress
-      [percent]="20"
-      [radius]="100"
-      [showUnits]="false"
-      [showTitle] = true
-      [titleColor]="'#ff8800'"
-      [showUnits] = true
-      [subtitleColor]="'#ff8800'"
-      [subtitleFontSize]="'1em'"
-      [showSubtitle] = true
-      [subtitle]="'HTML'"
-      [outerStrokeWidth]="14"
-      [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#ff8800'"
-      [innerStrokeColor]="'#b5b5b5'"
-      [animation]="true"
-      [animationDuration]="600"
-   ></circle-progress>
+<section id="skill" class="skills">
+  <div class="contenedor">
+    <div class="row bg-dark p-2 bg-opacity-10">
+      <div class="col-md-10">
+        <h4>Skills</h4>
+      </div>
+      <div class="col-md-2">
+        <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalSkills"
+          data-bs-toggle="modal">Agregar+</button>
+      </div>
     </div>
-    <div class= "text-center col-sm-4 col-md-4 col-lg-4">
-      <circle-progress
-      [percent]="20"
-      [radius]="100"
-      [showUnits]="false"
-      [showTitle] = true
-      [titleColor]="'#ff8800'"
-      [showUnits] = true
-      [subtitleColor]="'#ff8800'"
-      [subtitleFontSize]="'1em'"
-      [showSubtitle] = true
-      [subtitle]="'CSS'"
-      [outerStrokeWidth]="14"
-      [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#ff8800'"
-      [innerStrokeColor]="'#b5b5b5'"
-      [animation]="true"
-      [animationDuration]="600"
-   ></circle-progress>
+    <div class="table-responsive">
+      <table class="table table-responsive table-rb-#rgb(255, 226, 146)">
+        <thead>
+          <tr>
+            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="1">
+              <p>Nombre del skill</p>
+            </td>
+            <td colspan="10">
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" role="progressbar"
+                  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+                  75%
+                </div>
+              </div>
+            </td>
+            <td colspan="1">
+              <a type="button" class="btn-editar" data-bs-target="#modalSkills" data-bs-toggle="modal">
+                <img class="nav-menu-link-img"
+                  src="../../../assets/edit.png"
+                  id="editar">
+              </a>
+              &nbsp;
+              <a type="button" class="btn-borrar">
+                <img class="nav-menu-link-img"
+                  src="../../../assets/delete.png"
+                  id="borrar">
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-      <circle-progress
-      [percent]="10"
-      [radius]="100"
-      [showUnits]="false"
-      [showTitle] = true
-      [titleColor]="'#ff8800'"
-      [showUnits] = true
-      [subtitleColor]="'#ff8800'"
-      [subtitleFontSize]="'1em'"
-      [showSubtitle] = true
-      [subtitle]="'JavaScript'"
-      [outerStrokeWidth]="14"
-      [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#ff8800'"
-      [innerStrokeColor]="'#b5b5b5'"
-      [animation]="true"
-      [animationDuration]="600"
-   ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-      <circle-progress
-      [percent]="20"
-      [radius]="100"
-      [showUnits]="false"
-      [showTitle] = true
-      [titleColor]="'#ff8800'"
-      [showUnits] = true
-      [subtitleColor]="'#ff8800'"
-      [subtitleFontSize]="'1em'"
-      [showSubtitle] = true
-      [subtitle]="'Github'"
-      [outerStrokeWidth]="14"
-      [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#ff8800'"
-      [innerStrokeColor]="'#b5b5b5'"
-      [animation]="true"
-      [animationDuration]="600"
-   ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-      <circle-progress
-      [percent]="30"
-      [radius]="100"
-      [showUnits]="false"
-      [showTitle] = true
-      [titleColor]="'#ff8800'"
-      [showUnits] = true
-      [subtitleColor]="'#ff8800'"
-      [subtitleFontSize]="'1em'"
-      [showSubtitle] = true
-      [subtitle]="'Inglés'"
-      [outerStrokeWidth]="14"
-      [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#ff8800'"
-      [innerStrokeColor]="'#b5b5b5'"
-      [animation]="true"
-      [animationDuration]="600"
-   ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-      <circle-progress
-      [percent]="100"
-      [radius]="100"
-      [showUnits]="false"
-      [showTitle] = true
-      [titleColor]="'#ff8800'"
-      [showUnits] = true
-      [subtitleColor]="'#ff8800'"
-      [subtitleFontSize]="'1em'"
-      [showSubtitle] = true
-      [subtitle]="'Trabajo colaborativo'"
-      [outerStrokeWidth]="14"
-      [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#ff8800'"
-      [innerStrokeColor]="'#b5b5b5'"
-      [animation]="true"
-      [animationDuration]="600"
-   ></circle-progress>
-    </div>
-</div>
+  </div>
+</section>
