Se comenzaron a pasar desde la maqueta los modales para login y algunos para editar cada seccion

--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.html
@@ -2,11 +2,12 @@
     <header>
       <div class="contenedor">
         <img class="img-fluid"
-          src="../../../assets/banner1.png" id="banner1">
+          src="./assets/banner1.png" id="banner1">
   
         <a type="button" data-bs-target="#modalBanner" data-bs-toggle="modal">
           <img class="nav-menu-link-img"
-            src="../../../assets/edit.png" id="lapiz">
+            src="./assets/edit.png" id="lapiz">
         </a>
       </div>
     </header>
+<app-edit-banner></app-edit-banner>
