--- a/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
@@ -1,10 +1,11 @@
-<div class="flex-contenedor"> <!--esto no se si va aca o va en el index.html general-->
-<app-navbar></app-navbar>
-<app-banner></app-banner>
-<app-acerca-de></app-acerca-de>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-skills></app-skills>
-<app-proyectos></app-proyectos>
-<app-footer></app-footer>
+<div class="flex-contenedor">
+    <!--esto no se si va aca o va en el index.html general-->
+    <app-navbar></app-navbar>
+    <app-banner></app-banner>
+    <app-acerca-de></app-acerca-de>
+    <app-experiencia></app-experiencia>
+    <app-educacion></app-educacion>
+    <app-skills></app-skills>
+    <app-proyectos></app-proyectos>
+    <app-footer></app-footer>
 </div>
