--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/navbar/navbar.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         </li>
         <!--Boton para loguear-->
         <li class="nav-item">
-          <a type="button" class="iconos" data-bs-target="#modalLogin" data-bs-toggle="modal">
+          <a type="button" href="" class="iconos" data-bs-target="#modalLogin" data-bs-toggle="modal">
             <img class="nav-menu-link-img"
               src="../../../assets/lock.png"
               id="bloqueado">
@@ -28,3 +28,4 @@
       </ul>
     </div>
   </nav>
+  <app-login></app-login>
