Se terminaron de pasar todos los modals para editar y agregar

--- a/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
@@ -1,5 +1,5 @@
+    <!--<router-outlet></router-outlet>-->
 <div class="flex-contenedor">
-    <!--esto no se si va aca o va en el index.html general-->
     <app-navbar></app-navbar>
     <app-banner></app-banner>
     <app-acerca-de></app-acerca-de>
