--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/educacion/educacion.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/educacion/educacion.component.html
@@ -5,7 +5,7 @@
         <h4>Educación</h4>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalEducacion" data-bs-toggle="modal">Agregar+</button>
+        <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalAddEducacion" data-bs-toggle="modal">Agregar+</button>
       </div>
     </div>
     <div class="table-responsive">
@@ -32,7 +32,7 @@
             <td>
               <a type="button" class="btn-editar" data-bs-target="#modalEducacion" data-bs-toggle="modal">
                 <img class="nav-menu-link-img"
-                  src="../../../assets/edit.png"
+                  src="./assets/edit.png"
                   id="editar">
               </a>
             </td>
@@ -44,7 +44,7 @@
             <td>
               <a type="button" class="btn-borrar">
                 <img class="nav-menu-link-img"
-                  src="../../../assets/delete.png"
+                  src="./assets/delete.png"
                   id="borrar">
               </a>
             </td>
@@ -54,3 +54,5 @@
     </div>
   </div>
 </section>
+<app-edit-educacion></app-edit-educacion>
+<app-add-educacion></app-add-educacion>
