--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/experiencia/experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/experiencia/experiencia.component.html
@@ -5,7 +5,7 @@
         <h4>Experiencia</h4>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalExperiencia"
+        <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalAddExperiencia"
           data-bs-toggle="modal">Agregar+</button>
       </div>
     </div>
@@ -34,7 +34,7 @@
             <td>
               <a type="button" class="btn-editar" data-bs-target="#modalExperiencia" data-bs-toggle="modal">
                 <img class="nav-menu-link-img"
-                  src="../../../assets/edit.png"
+                  src="./assets/edit.png"
                   id="editar">
               </a>
             </td>
@@ -47,7 +47,7 @@
             <td>
               <a type="button" class="btn-borrar">
                 <img class="nav-menu-link-img"
-                  src="../../../assets/delete.png"
+                  src="./assets/delete.png"
                   id="borrar">
               </a>
             </td>
@@ -58,3 +58,4 @@
   </div>
 </section>
 <app-edit-experiencia></app-edit-experiencia>
+<app-add-experiencia></app-add-experiencia>
