--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/edit-educacion/edit-educacion.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/edit-educacion/edit-educacion.component.html
@@ -1,28 +1,18 @@
-<!-- Modal edicion Acerca_de-->
-<div class="modal" id="modalAcercade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable" role="document">
+<!-- Modal edicion Educacion-->
+<div class="modal fade" id="modalEducacion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Editar acerca de mi</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Editar educación</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <!--Aqui va el formulario-->
                 <div class="row">
-                    <div class="col-12 order-first">
+                    <div class="col-10 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Foto perfil</h5>
-                            </label>
-                            <input class="form-control form-control-sm" id="formFileSm" type="file">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 order-first">
-                        <div class="mb-3">
-                            <label for="formFileSm" class="form-label">
-                                <h5>Nombre</h5>
+                                <h5>Institución</h5>
                             </label>
                             <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
@@ -30,10 +20,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 order-first">
+                    <div class="col-10 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Apellido</h5>
+                                <h5>Carrera/Curso</h5>
                             </label>
                             <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
@@ -41,21 +31,32 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 order-first">
+                    <div class="col-10 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Título</h5>
+                                <h5>Desde</h5>
                             </label>
-                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                            <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 order-first">
+                    <div class="col-10 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Acerca de mi</h5>
+                                <h5>Hasta</h5>
+                            </label>
+                            <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
+                                aria-label=".form-control-sm example">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 order-first">
+                        <div class="mb-3">
+                            <label for="formFileSm" class="form-label">
+                                <h5>Descripción</h5>
                             </label>
                             <textarea class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label="With textarea"></textarea>
