--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/proyectos/proyectos.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/proyectos/proyectos.component.html
@@ -5,7 +5,7 @@
                 <h4>Proyectos</h4>
             </div>
             <div class="col-md-2">
-                <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalProyectos"
+                <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalAddProyectos"
                     data-bs-toggle="modal">Agregar+</button>
             </div>
         </div>
@@ -29,7 +29,7 @@
                         <td>
                             <a type="button" class="btn-editar" data-bs-target="#modalProyectos" data-bs-toggle="modal">
                                 <img class="nav-menu-link-img"
-                                    src="../../../assets/edit.png"
+                                    src="./assets/edit.png"
                                     id="editar">
                             </a>
                         </td>
@@ -47,7 +47,7 @@
                         <td>
                             <a type="button" class="btn-borrar">
                                 <img class="nav-menu-link-img"
-                                    src="../../../assets/delete.png"
+                                    src="./assets/delete.png"
                                     id="borrar">
                             </a>
                         </td>
@@ -64,3 +64,5 @@
         </div>
     </div>
 </section>
+<app-edit-proyecto></app-edit-proyecto>
+<app-add-proyecto></app-add-proyecto>
