--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/skills/skills.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/skills/skills.component.html
@@ -5,7 +5,7 @@
         <h4>Skills</h4>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalSkills"
+        <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalAddSkills"
           data-bs-toggle="modal">Agregar+</button>
       </div>
     </div>
@@ -54,3 +54,5 @@
     </div>
   </div>
 </section>
+<app-edit-skill></app-edit-skill>
+<app-add-skill></app-add-skill>
