--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-experiencia/add-experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-experiencia/add-experiencia.component.html
@@ -1,9 +1,9 @@
-<!-- Modal edicion Acerca_de-->
-<div class="modal" id="modalAcercade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable" role="document">
+<!-- Modal agregar Experiencia-->
+<div class="modal fade" id="modalAddExperiencia" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Editar acerca de mi</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Agregar experiencia</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -12,17 +12,7 @@
                     <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Foto perfil</h5>
-                            </label>
-                            <input class="form-control form-control-sm" id="formFileSm" type="file">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 order-first">
-                        <div class="mb-3">
-                            <label for="formFileSm" class="form-label">
-                                <h5>Nombre</h5>
+                                <h5>Empresa</h5>
                             </label>
                             <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
@@ -33,7 +23,7 @@
                     <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Apellido</h5>
+                                <h5>Puesto</h5>
                             </label>
                             <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
@@ -44,7 +34,29 @@
                     <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Título</h5>
+                                <h5>Desde</h5>
+                            </label>
+                            <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
+                                aria-label=".form-control-sm example">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 order-first">
+                        <div class="mb-3">
+                            <label for="formFileSm" class="form-label">
+                                <h5>Hasta</h5>
+                            </label>
+                            <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
+                                aria-label=".form-control-sm example">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 order-first">
+                        <div class="mb-3">
+                            <label for="formFileSm" class="form-label">
+                                <h5>Estado actual</h5>
                             </label>
                             <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
@@ -55,7 +67,7 @@
                     <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Acerca de mi</h5>
+                                <h5>Descripción</h5>
                             </label>
                             <textarea class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label="With textarea"></textarea>
