--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/edit-skill/edit-skill.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/edit-skill/edit-skill.component.html
@@ -1,20 +1,32 @@
-<!--Modal edicion Banner-->
-<div class="modal fade" id="modalBanner" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal edicion Skills-->
+<div class="modal fade" id="modalSkills" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Editar banner</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Editar skill</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <!--Aqui va el formulario-->
                 <div class="row">
+                    <div class="col-10 order-first">
+                        <div class="mb-3">
+                            <label for="formFileSm" class="form-label">
+                                <h5>Skill</h5>
+                            </label>
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                                aria-label=".form-control-sm example">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Imagen del banner</h5>
+                                <h5>Porcentaje</h5>
                             </label>
-                            <input class="form-control form-control-sm" id="formFileSm" type="file">
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                                aria-label=".form-control-sm example">
                         </div>
                     </div>
                 </div>
