--- a/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/app.component.html
@@ -1,11 +1,1 @@
-    <!--<router-outlet></router-outlet>-->
-<div class="flex-contenedor">
-    <app-navbar></app-navbar>
-    <app-banner></app-banner>
-    <app-acerca-de></app-acerca-de>
-    <app-experiencia></app-experiencia>
-    <app-educacion></app-educacion>
-    <app-skills></app-skills>
-    <app-proyectos></app-proyectos>
-    <app-footer></app-footer>
-</div>
+<router-outlet></router-outlet>
