--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-educacion/add-modal-educacion.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-educacion/add-modal-educacion.component.html
@@ -1,9 +1,9 @@
-<!--Modal educacion(mudarlo a componentes/modals/modal-educacion)-->
-<div class="modal fade" id="modalEducacion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!--Modal add educacion-->
+<div class="modal fade" id="modalAddEducacion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Editar educación</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Agregar estudio/capacitación</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
