--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-proyecto/add-modal-proyecto.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-proyecto/add-modal-proyecto.component.html
@@ -1,9 +1,9 @@
-<!-- Modal edicion Proyectos-->
-<div class="modal fade" id="modalProyectos" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal add Proyectos-->
+<div class="modal fade" id="modalAddProyectos" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Editar proyectos</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Agregar proyecto</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -89,4 +89,4 @@
             </div>
         </div>
     </div>
-</div>    
+</div>   
