--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-skill/add-modal-skill.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-skill/add-modal-skill.component.html
@@ -1,5 +1,5 @@
-<!-- Modal edicion Skills-->
-<div class="modal fade" id="modalSkills" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal add Skills-->
+<div class="modal fade" id="modalAddSkills" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
