--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-experiencia/add-modal-experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-experiencia/add-modal-experiencia.component.html
@@ -1,18 +1,18 @@
-<!--Modal educacion(mudarlo a componentes/modals/modal-educacion)-->
-<div class="modal fade" id="modalEducacion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!--Modal add experiencia-->
+<div class="modal fade" id="modalAddExperiencia" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Editar educación</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Agregar experiencia</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <!--Aqui va el formulario-->
                 <div class="row">
-                    <div class="col-10 order-first">
+                    <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Institución</h5>
+                                <h5>Empresa</h5>
                             </label>
                             <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
@@ -20,10 +20,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-10 order-first">
+                    <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
-                                <h5>Carrera/Curso</h5>
+                                <h5>Puesto</h5>
                             </label>
                             <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-10 order-first">
+                    <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
                                 <h5>Desde</h5>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-10 order-first">
+                    <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
                                 <h5>Hasta</h5>
@@ -53,7 +53,18 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-10 order-first">
+                    <div class="col-12 order-first">
+                        <div class="mb-3">
+                            <label for="formFileSm" class="form-label">
+                                <h5>Estado actual</h5>
+                            </label>
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                                aria-label=".form-control-sm example">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 order-first">
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">
                                 <h5>Descripción</h5>
